--- a/index.html
+++ b/index.html
@@ -2,24 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Bubbles V0.12</title>
-    <!-- <link rel="stylesheet" type="text/css" href="/css/lib/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="/BubbleV2/css/bubbles.css"> -->
+    <title>SKL VoteIT - Bubbles Visualization V0.15</title>
     <link rel="stylesheet" type="text/css" href="css/map.css">
     <link rel="stylesheet" type="text/css" href="css/bubbles.css">
     <link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
 
   </head>
   <body>
-    <div class="inner_content">
+  <div class="inner_content">
     <div id="nav_bar_top" >
       <nav class="navbar navbar-expand-sm navbar-dark py-0 px-0">
         <a class="col-2 navbar-brand mx-0" style="border-right: 1px solid #505050" href="http://skoldigiplan.se">#skolDigiplan</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExample03">
+        <div class="collapse navbar-collapse" style="height:7vh;">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active view" id="view_0" style="border-left:none !important;">
               <a class="nav-link" onclick="change_view(0)">Översikt <span class="sr-only">(current)</span></a>
@@ -147,13 +141,12 @@
   <hr>
   <p class='mx-2'>
   Här skriver vi lite information om projektet och hur man använder verktyget
-</p>
-<span style="font-size:10px;"><a target="_blank" href="http://www.victorkesten.com">Victor Kesten</a></span>
+  </p>
+  <span style="font-size:10px;"><a target="_blank" href="http://www.victorkesten.com">Victor Kesten</a></span>
 
-<img class="my-1" src="resources/SKL_logga.png"/ style="position:absolute;width:15%; bottom:0; right:27%;">
+  <img class="my-1" src="resources/SKL_logga.png"/ style="position:absolute;width:15%; bottom:0; right:27%;">
 
-<img src="resources/känneteckenskoldigiplan.png"/ href="http://skoldigiplan.se" style="margin-left:3%;width:25%;bottom:0; right:0; position:absolute;">
-
+  <img src="resources/känneteckenskoldigiplan.png"/ href="http://skoldigiplan.se" style="margin-left:3%;width:25%;bottom:0; right:0; position:absolute;">
 </div>
   <script src="js/libraries/jquery-3.2.1.min.js"></script>
   <script src="js/libraries/bootstrap/bootstrap.min.js"></script>
