Almost all done with upload

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
   <script src="js/new_bubbles.js"></script>
   <script src="js/data_parse.js"></script>
 
+  <!-- <script src="create_ranking.js"></script> -->
+
 </body>
 
 <html>
